@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package engine.controller {
      class GameTypeHandler {
          {static} + checkRunning()
      }
    }
  }
  

  package  {
    package engine.controller {
      class RespawnController {
          - deadPlayers : LinkedBlockingQueue<Player>
          + RespawnController()
          + run()
          - normalRespawn()
      }
    }
  }
  

  RespawnController -up-|> Runnable
  RespawnController o-- GameState : gameState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
